--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="nav">
                     <ul>
-                        <li class="nav-btn"><a href="file:///C:/Users/%D0%BA%D0%BE%D1%81%D1%82%D1%8F/WebstormProjects/untitled/index.html">Home</a></li>
+                        <li class="nav-btn"><a href="http://localhost:63342/index.html/index.html?_ijt=55tmikftm9hge35fvk06rdhppf">Home</a></li>
                         <li class="nav-btn"><a href="">Posts</a></li>
                         <li class="nav-Logo" ><a href="">Dream trip</a></li>
                         <li class="nav-btn"><a href="http://localhost:63342/index.html/login.html?_ijt=qnnlumg1f9v8hl7il441tsv58p">Login</a></li>
@@ -26,23 +26,26 @@
 
     <div class="loginform">
     <div class="textLogin">Login</div>
+        <div class="container">
+            <div class="registerCont">
 
-    <div class="container">
         <label for="uname"><b>Username</b></label>
         <input type="text" placeholder="Enter Username" name="uname" required>
 
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
-<div class="LoginConteinerbtn">
-        <div class="dws">
+        <div class="LoginConteinerbtn">
+
+        <div class="dws btnreg">
             <a  target="_blank" class="butt">Login</a>
         </div>
-</div>
+            </div>
         <label>
             <input type="checkbox" checked="checked" name="remember"> Remember me
         </label>
-    </div>
-    </div>
+
+        </div>
+        </div>
 
 
 
