--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="nav">
                     <ul>
-                        <li class="nav-btn"><a href="file:///C:/Users/%D0%BA%D0%BE%D1%81%D1%82%D1%8F/WebstormProjects/untitled/index.html">Home</a></li>
+                        <li class="nav-btn"><a href="http://localhost:63342/index.html/index.html?_ijt=55tmikftm9hge35fvk06rdhppf">Home</a></li>
                         <li class="nav-btn"><a href="">Posts</a></li>
                         <li class="nav-Logo" ><a href="">Dream trip</a></li>
                         <li class="nav-btn"><a href="http://localhost:63342/index.html/login.html?_ijt=qnnlumg1f9v8hl7il441tsv58p">Login</a></li>
@@ -30,9 +30,10 @@
 
 
             <div class="container ">
-                <div class="containerReg"
+
                 <div class="login">
                         <div class="textLogin">Register</div>
+                    <div class="registerCont">
 
                     <label for="email"><b>Email</b></label>
                     <input type="text" id="email" placeholder="Enter Email" name="email" required>
@@ -45,11 +46,11 @@
                  <hr>
 
 
-                  <div class="registerCont">
-                        <div class="dws">
+
+                        <div class="dws btnreg">
                             <a href="" id="submitRegistration"  class="butt">Register</a>
                         </div>
-                 </div>
+                </div>
                 </div>
             </div>
 
